# iota-c-light-wallet

./: CMakeLists.txt  README.md
src/: aux.h  curl-request.c  curl-request.h  main.c
src/iota/: iota_api.c  iota_api.h  transfers.c
